<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#039BE5"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/firebaselogo"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_user"
        android:textSize="35sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:padding="5dp"
        android:fontFamily="@font/carlito_bold"
        android:textColor="#ffffff"
        />

    <Button
        android:id="@+id/msgButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_button_msg"/>

    <Button
        android:id="@+id/phnButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_button_phn"
        android:text="@string/phone" />

    <Button
        android:id="@+id/brwserButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_button_brwser"
        android:text="@string/browser" />

    <Button
        android:id="@+id/fbButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_button_fb"
        android:text="@string/facebook" />

    <Button
        android:id="@+id/instaButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_button_insta"
        android:text="@string/instagram" />

    <Button
        android:id="@+id/logout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"



        android:background="@drawable/rounded_button"
        android:text="@string/log_out" />

</LinearLayout>